# python-games

./: .gitignore
drowning-tides/: CLAUDE.md  README.md  boat.py  camera.py  console.py  main.py  mesh.py  plan.md  pyproject.toml  rain.py  scene.py  settings.py  shader_program.py  sky.py  the-sea-remembers-game-theme.md  water.py  waves.py  weather.py
drowning-tides/shaders/: post.vert  sky.vert  water.vert
drowning-tides/src/drowning_tides/: __init__.py  app.py
drowning-tides/src/drowning_tides/assets/: CREDITS.md
drowning-tides/src/drowning_tides/config/: settings.py
drowning-tides/src/drowning_tides/core/: frustum.py  game_state.py  meshbuilder.py  model.py  shader_program.py
drowning-tides/src/drowning_tides/render/: camera.py  lightning.py  rain.py  scene.py  sky.py  water.py
drowning-tides/src/drowning_tides/shaders/: blur.frag  boat.frag  bolt.frag  bolt.vert  bright.frag  console.frag  console.vert  godrays.frag  model.frag  model.vert  post.frag  rain.frag  rain.vert  sky.frag  water.frag  water.vert
drowning-tides/src/drowning_tides/ui/: console.py  hud.py  pause_menu.py
drowning-tides/src/drowning_tides/world/: aberration.py  birds.py  boat.py  daycycle.py  fishing.py  island.py  npc.py  npc_boat.py  player.py  town.py  waves.py  weather.py
drowning-tides/tests/: test_aberration.py  test_birds.py  test_camera.py  test_daycycle.py  test_fishing.py  test_frustum.py  test_game_state.py  test_island.py  test_island_gen.py  test_model.py  test_player.py  test_waves.py  test_weather.py
drowning-tides/tools/: gen_island.py  gen_islands.py
(+142 files in other folders)
