[project]
name = "drowning-tides"
version = "0.1.0"
description = "Low-poly maritime cosmic-horror fishing game with a dark painterly aesthetic"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "moderngl>=5.12.0",
    "numpy>=2.2.6",
    "pygame>=2.6.1",
    "pyglm>=2.8.3",
    "pygltflib>=1.16.0",
]

[project.scripts]
drowning-tides = "drowning_tides.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drowning_tides"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
